discussion/kv_engine/179220/179220_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52676: Track the MFU value of all evictable items

Eviction seeks to identify "cold" items to evict - items which have
been used least/least recently, as determined by its Most Frequently
Used counter.

Previously, the distribution of MFU values was learned progressively as
eviction ran.

However, future work may change from evicting some percentage of the
items in _each_ vbucket, to evicting some percentage of all items -
even if that leads to uneven vbuckets.

This would better keep the hottest items in the whole bucket resident
e.g., a very cold vbucket may have everything evicted, rather than
having the same percentage resident as a much hotter vbucket.

To support this, it is required that a distribution of MFUs across the
entire bucket could be approximated. Learning this incrementally would
be heavily influenced by the order vbuckets are visited in, and may be
quite inaccurate until paging has visited every vb (at which point it
is too late).

As as step towards this goal, this patch tracks the MFU of all
evictable items in a vbucket "up front"; any action which may change
the evictability of an item, or its MFU, now updates a histogram.

Change-Id: I56c1a86b9ca9cfd927692f90b4b8f4acc56586b9

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2022-09-01 12:34:12.000000000
Message: 
Uploaded patch set 5: Patch Set 4 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-09-01 13:00:36.000000000
Message: 
Patch Set 5: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19928/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket.cc:280:13: error: no viable conversion from "(lambda at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket.cc:280:13)" to "std::function<bool (const HashTable::HashBucketLock &, const StoredValue &)>" [clang-diagnostic-error]
            [this](const HashTable::HashBucketLock& lh, const StoredValue& v) {
            ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/std_function.h:337:7: note: candidate constructor not viable: no known conversion from "(lambda at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket.cc:280:13)" to "std::nullptr_t" (aka "nullptr_t") for 1st argument
      function(nullptr_t) noexcept
      ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/std_function.h:348:7: note: candidate constructor not viable: no known conversion from "(lambda at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket.cc:280:13)" to "const std::function<bool (const HashTable::HashBucketLock &, const StoredValue &)> &" for 1st argument
      function(const function& __x);
      ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/std_function.h:357:7: note: candidate constructor not viable: no known conversion from "(lambda at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket.cc:280:13)" to "std::function<bool (const HashTable::HashBucketLock &, const StoredValue &)> &&" for 1st argument
      function(function&& __x) noexcept : _Function_base()
      ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/std_function.h:381:2: note: candidate template ignored: requirement "_Callable<(lambda at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket.cc:280:13), std::__invoke_result<(lambda at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket.cc:280:13) &, const HashTable::HashBucketLock &, const StoredValue &> >::value" was not satisfied [with _Functor = (lambda at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket.cc:280:13), $1 = void]
        function(_Functor);
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/hash_table.h:557:55: note: passing argument to parameter "callback" here
                               const StoredValue& v)> callback) {
                                                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket.cc:281:30: error: no member named "eligibleToPageOut" in "VBucket" [clang-diagnostic-error]
                return this->eligibleToPageOut(lh, v);
                             ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19928/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket.cc:280:13:
error: no viable conversion from "(lambda at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket.cc:280:13)" to "std::function<bool (const HashTable::HashBucketLock &, const StoredValue &)>" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19928/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48863/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/vbucket.cc(281): error C2039: "eligibleToPageOut": is not a member of "VBucket" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48863/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41079/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/vbucket.cc:281:30:
error: no member named "eligibleToPageOut" in "VBucket"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41079/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9626/ : FAILURE

Compile error at [2022-09-01T12:51:50.791Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/vbucket.cc:281:30:
error: no member named "eligibleToPageOut" in "VBucket"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9626/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21884/ : FAILURE

Compile error at [2022-09-01T12:55:16.917Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/vbucket.cc:281:30:
error: ?class VBucket? has no member named ?eligibleToPageOut?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21884/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9725/ : FAILURE

Compile error at [2022-09-01T12:42:59.936Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/vbucket.cc:281:30:
error: ?class VBucket? has no member named ?eligibleToPageOut?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9725/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21188/ : FAILURE

Compile error at [2022-09-01T12:46:20.348Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/vbucket.cc:281:30:
error: no member named "eligibleToPageOut" in "VBucket"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21188/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22238/ : FAILURE

Compile error at [2022-09-01T12:59:33.573Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/vbucket.cc:281:30:
error: ?class VBucket? has no member named ?eligibleToPageOut?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22238/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22979/ : FAILURE

Compile error at [2022-09-01T12:58:09.270Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/vbucket.cc:281:30:
error: no member named "eligibleToPageOut" in "VBucket"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22979/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30265/ : FAILURE

Compile error at [2022-09-01T12:59:29.098Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/vbucket.cc:281:30:
error: no member named "eligibleToPageOut" in "VBucket"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30265/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19149/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
